# cuda-compute

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  run_scripts.sh  setup.sh
Core/: CMakeLists.txt
Core/bind/: module.cu
Core/include/: CommonOp.cuh  CudaData.cuh  Device.cuh  DeviceManager.cuh  Error.cuh  Matrix.cuh  MatrixOp.cuh  Stream.cuh  Timer.cuh  Vector.cuh  VectorOp.cuh
Core/src/: CommonOp.cu  Device.cu  DeviceManager.cu  Stream.cu  Timer.cu
UnitTest/: CMakeLists.txt
UnitTest/test/: test_conversion.cu  test_matrix.cu  test_vector.cu
scripts/: cuda_compute_wrapper.py  demo.py  device_query.py  run_conversion.py  run_inner.py  run_matmul.py  run_max.py  run_mean.py  run_min.py  run_module.py  run_reversed.py  run_sort.py  run_transpose.py
